--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~39.0.2",
     "expo-image-picker": "^9.1.1",
     "firebase": "^8.1.1",
+    "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
@@ -26,6 +27,7 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-paper": "^4.4.1",
     "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.15.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
